k8s/db-sql.yaml
# SHARD 1: DEFAULT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-default
spec:
  selector:
    matchLabels:
      app: postgres-default
  template:
    metadata:
      labels:
        app: postgres-default
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db # Nome DNS interno
spec:
  ports:
    - port: 5432
  selector:
    app: postgres-default

---
# SHARD 2: PREMIUM
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-premium
spec:
  selector:
    matchLabels:
      app: postgres-premium
  template:
    metadata:
      labels:
        app: postgres-premium
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-shard2 # Nome DNS interno para o Shard 2
spec:
  ports:
    - port: 5432
  selector:
    app: postgres-premium
